--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "express-pino-logger": "^2.0.0",
     "minimist": "^1.2.0",
+    "pino": "^4.3.0",
+    "pino-http-print": "^1.0.1",
     "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "pino-caller": "^1.0.1",
+    "pino-debug": "^1.0.3"
   }
 }
