--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "express-favicon": "^2.0.1",
     "express-pino-logger": "^2.0.0",
     "minimist": "^1.2.0",
     "pino": "^4.3.0",
